// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Returns the default options with input restrictions/threshold/scroll 1`] = `
Object {
  "restrictions": Object {
    "allowLeavingFromBottom": false,
    "allowLeavingFromLeft": true,
    "allowLeavingFromRight": true,
    "allowLeavingFromTop": true,
  },
  "scroll": Object {
    "enable": true,
    "speed": 10,
    "threshold": Object {
      "horizontal": 9000,
      "vertical": 80,
    },
  },
  "threshold": Object {
    "horizontal": 9000,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns default options when empty object is passed 1`] = `
Object {
  "restrictions": Object {
    "allowLeavingFromBottom": true,
    "allowLeavingFromLeft": true,
    "allowLeavingFromRight": true,
    "allowLeavingFromTop": true,
  },
  "scroll": Object {
    "enable": true,
    "speed": 10,
    "threshold": Object {
      "horizontal": 80,
      "vertical": 80,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input restrictions/allowLeavingFromBottom 1`] = `
Object {
  "restrictions": Object {
    "allowLeavingFromBottom": false,
    "allowLeavingFromLeft": true,
    "allowLeavingFromRight": true,
    "allowLeavingFromTop": true,
  },
  "scroll": Object {
    "enable": true,
    "speed": 10,
    "threshold": Object {
      "horizontal": 80,
      "vertical": 80,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold 1`] = `
Object {
  "restrictions": Object {
    "allowLeavingFromBottom": true,
    "allowLeavingFromLeft": true,
    "allowLeavingFromRight": true,
    "allowLeavingFromTop": true,
  },
  "scroll": Object {
    "enable": true,
    "speed": 10,
    "threshold": Object {
      "horizontal": 1000,
      "vertical": 80,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;

exports[`extractOpts Returns the default options with input scroll/threshold/enable 1`] = `
Object {
  "restrictions": Object {
    "allowLeavingFromBottom": true,
    "allowLeavingFromLeft": true,
    "allowLeavingFromRight": true,
    "allowLeavingFromTop": true,
  },
  "scroll": Object {
    "enable": false,
    "speed": 10,
    "threshold": Object {
      "horizontal": 1000,
      "vertical": 80,
    },
  },
  "threshold": Object {
    "horizontal": 60,
    "vertical": 60,
  },
}
`;
